fuel/modules/fuel/assets/css/fuel.css
/* ... */
.ico_remove_line { float: right;  }
.ico_replace { background-position: 5px -1182px; }
.ico_save{ background-position: 5px -442px; }
.ico_select_all{ background-position: 5px -1330px; }
.ico_settings { background-position: 5px -1700px; }
.ico_sitevariables{ background-position: 5px -1219px; }
.ico_success, .ico_yes { background-position: 5px -332px; }
.ico_table { background-position: 5px -1663px; width:16px;height:16px; }
.ico_tags { background-position: 5px -1774px; }
.ico_tools { background-position: 5px -1959px; }
.ico_tree{ background-position: 5px -1885px; }
.ico_view { background-position: 5px -849px; }
.ico_view_all { background-image: none; line-height: 22px; padding-left: 5px; }
.ico_users { background-position: 5px -1589px; }
.ico_users_send_email{ background-position: 5px -482px; }
.ico_warn { background-position: 15px -516px; }

.notification .ico_success, .notification .ico_yes { background-position: 15px -330px; }


/******************************************************
main panel 
******************************************************/
div#fuel_main_panel { position: absolute; top: 0; left: 201px; right: 0px; bottom: 0px; background-color: #fff; -webkit-transition: all 0.2s cubic-bezier(0.445,0,0,1); -moz-transition: all 0.2s cubic-bezier(0.445,0,0,1); -ms-transition: all 0.2s cubic-bezier(0.445,0,0,1); -o-transition: all 0.2s cubic-bezier(0.445,0,0,1); transition: all 0.2s cubic-bezier(0.445,0,0,1); }
#nav_toggle { opacity:0.9;}
#nav_toggle { position: absolute; left: 182px; top: 0; font-size: 1.3em; color: #fff; opacity:0.5; cursor: pointer; display: block; padding-left: 25px; background:url(../images/icons/ico_nav_list.png) no-repeat left center; background-size: 50%; text-indent: -10000px; }

.nav_hide div#fuel_main_panel, div#fuel_left_panel { top: 30px; left: 0px; }
body.nav_hide { overflow: hidden; width: 100%; display: block; position: relative;  }
body.nav_hide, div#fuel_main_panel { min-width: 700px; }
.nav_hide div#fuel_top { height: 30px; line-height: 30px;  }
.nav_hide div#fuel_left_panel { left: -201px; z-index: 50; -webkit-transform: translateX(201px); -moz-transform: translateX(201px); -ms-transform: translateX(201px); -o-transform: translateX(201px); transform: translateX(201px); }
.nav_hide div#fuel_main_panel { left: 0px; z-index: 100;  }
.nav_hide h1#fuel_site_name { width: auto; display: block; float: none;  padding: 0 100px 0 85px; text-align: center; }
.nav_hide div#fuel_left_panel_inner li.active { -webkit-background-size: auto 100%; background-size: auto 100%; }
.nav_hide #nav_toggle { position: absolute; left: 15px; top: 0; font-size: 1.3em; color: #fff; opacity:0.5; cursor: pointer; display: block; padding-left: 20px; background-size: 27%; text-indent: 0; }
.nav_hide div#fuel_main_panel {-webkit-transform: translateX(0px); -moz-transform: translateX(0px); -ms-transform: translateX(0px); -o-transform: translateX(0px); transform: translateX(0px); }

/* iPads (portrait and landscape) */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
  div#fuel_left_panel a { font-size: 1.2em; line-height: 2em; }
}

/* Smartphones (portrait and landscape) */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
  div#fuel_left_panel a { font-size: 1.2em; line-height: 2em; }
}

/* bread nav */
div#fuel_main_top_panel { height: 29px; font-size: 13px; color: #fff; background-color: #e7e7e7; border-bottom: 1px solid #ccc; overflow: hidden; }
div#fuel_main_top_panel h2 { color: #333; text-shadow: #fff 0px 1px 0px; line-height: 30px; margin-left: 11px; }
div#fuel_main_top_panel h2 a { color: #0E3E7E; }
div#fuel_main_top_panel li { float: left; display: block; list-style: none; line-height: 29px; font-weight: bold; border-right: 1px solid #6e6e6e;}
div#fuel_main_top_panel li a { display: block; color: #fff; text-shadow: #555 0px 1px 0px; background: #6d6d6d url(../images/tab.png) repeat-x;  padding: 0 15px; }
div#fuel_main_top_panel li a:hover { background: #7c7c7c url(../images/tab.png) repeat-x 0 -29px; }
div#fuel_main_top_panel li.active a { background: #e7e7e7 url(../images/tab.png) repeat-x 0 -58px; color: #113556; text-shadow: #fff 0px 1px 0px;  }
div#fuel_login_logout { position: absolute; top: 8px; right: 15px; font-size: 11px; color: #333; background-color: #e7e7e7; height: 21px;text-shadow: #fff 0px 1px 0px;  }

div#fuel_actions { height: 46px; border-bottom: 1px solid #b6b6b6; position: relative; min-width: 680px;
background: #eee; 
background: -webkit-gradient(linear, left top, left bottom, color-stop(0, whiteSmoke), color-stop(1, #cfd1cf));
background: -moz-linear-gradient(top center, #f6f6f6 0%, #ddd 100%);
filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#dddddd');
 }

/* main content */
div#fuel_main_content { overflow: auto; position: absolute; top: 99px; left: 0px; right: 0px; bottom: 0px; }
div#fuel_main_content .buttonbar li, #fuel_main_content_compact .buttonbar li { margin-right: 15px; }
div#fuel_main_content_inner h3 { background-color: #f6f6f6; padding: 5px; margin-bottom: 10px; }
div#fuel_main_content_inner { padding: 15px 37px; }
div#fuel_main_content_inner .bullets { margin-left: 15px; }
div.noactions { top: 51px !important; }
div.notitlebar { top: 69px !important; }
div.noactions_notitlebar { top: 22px !important; }
div.noactions_nonotification { top: 30px !important; }

/* inline/compact mode */
div#fuel_main_panel_compact { position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: #fff; }
div#fuel_main_content_compact { background-color: #fff; overflow: auto; position: absolute; top: 99px; left: 0px; right: 0px; bottom: 0px; }

/* dashboard */
div.dashboard_pod { float: left; margin-right: 10px }
div.dashboard_module { float: left; margin-right: 10px; margin-top: 10px; }

/* filters */
div#filters { position: absolute; right: 15px; top: 12px; }
a#multi_delete { display: block; }
/* ... */

